--- a/SourceCode/2023/Nov2023/Mrinali/Task11/Main.xaml
+++ b/SourceCode/2023/Nov2023/Mrinali/Task11/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="807.3333333333334,702" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="807.3333333333334,732.6666666666666" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -45,6 +45,7 @@
       <AssemblyReference>System.Drawing.Common</AssemblyReference>
       <AssemblyReference>System.Drawing.Primitives</AssemblyReference>
       <AssemblyReference>System.Linq</AssemblyReference>
+      <AssemblyReference>System.Net.Mail</AssemblyReference>
       <AssemblyReference>System.ObjectModel</AssemblyReference>
       <AssemblyReference>System.Private.CoreLib</AssemblyReference>
       <AssemblyReference>System.Xaml</AssemblyReference>
@@ -57,7 +58,6 @@
       <AssemblyReference>System.Reflection.DispatchProxy</AssemblyReference>
       <AssemblyReference>System.Reflection.TypeExtensions</AssemblyReference>
       <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
-      <AssemblyReference>UiPath.Workflow</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
       <AssemblyReference>System.Memory.Data</AssemblyReference>
@@ -67,55 +67,55 @@
       <AssemblyReference>System.ComponentModel</AssemblyReference>
       <AssemblyReference>System.Memory</AssemblyReference>
       <AssemblyReference>System.Private.Uri</AssemblyReference>
-      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
-      <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
+      <AssemblyReference>UiPath.Workflow</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Flowchart DisplayName="Task_11" sap:VirtualizedContainerService.HintSize="634,637.3333333333334" sap2010:WorkflowViewState.IdRef="Flowchart_1">
+  <Flowchart sap2010:Annotation.AnnotationText="Based on user selection from Words like fruits, vegetables , the message needs to be displayed ( flowchart) " DisplayName="Task11(Flowchart)" sap:VirtualizedContainerService.HintSize="744,668" sap2010:WorkflowViewState.IdRef="Flowchart_2">
     <Flowchart.Variables>
-      <Variable x:TypeArguments="x:String" Name="Fruit_name" />
+      <Variable x:TypeArguments="x:String" Name="VegName" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-        <av:Point x:Key="ShapeLocation">270,2.5</av:Point>
+        <av:Point x:Key="ShapeLocation">270,2.6666666666666643</av:Point>
         <av:Size x:Key="ShapeSize">60,74.66666666666667</av:Size>
-        <av:PointCollection x:Key="ConnectorLocation">300,77.16666666666667 280,77.16666666666667 280,90.33333333333334</av:PointCollection>
+        <av:PointCollection x:Key="ConnectorLocation">300,77.33333333333334 300,123</av:PointCollection>
+        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
+        <x:Double x:Key="Width">710</x:Double>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart.StartNode>
-      <x:Reference>__ReferenceID6</x:Reference>
+      <x:Reference>__ReferenceID7</x:Reference>
     </Flowchart.StartNode>
-    <FlowStep x:Name="__ReferenceID6">
+    <FlowStep x:Name="__ReferenceID7">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">180,90.33333333333334</av:Point>
-          <av:Size x:Key="ShapeSize">200,99.33333333333333</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">280,189.66666666666669 272.5,189.66666666666669 272.5,216.66666666666669</av:PointCollection>
+          <av:Point x:Key="ShapeLocation">200,123</av:Point>
+          <av:Size x:Key="ShapeSize">200,54</av:Size>
+          <av:PointCollection x:Key="ConnectorLocation">200,150 182.66666666666669,150 182.66666666666669,206.66666666666669 392.6666666666667,206.66666666666669 392.6666666666667,236.66666666666669</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" sap2010:Annotation.AnnotationText="Selecting Fruit name to display using flow switch" DisplayName="Select Word" sap:VirtualizedContainerService.HintSize="200,99.33333333333333" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="[&quot; Select fruit name from here&quot; + vbNewLine + &quot;Mango&quot;+ vbNewLine + &quot;Kiwi&quot;+ vbNewLine + &quot;Orange&quot; + vbNewLine + &quot;Apple&quot;]" Title="Select Fruit Name">
+      <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Selection from words" sap:VirtualizedContainerService.HintSize="334,246" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="[&quot;Select vegetable names: &quot; + vbNewLine + &quot;Capsicum&quot;+ vbNewLine + &quot;Cauliflower&quot;+ vbNewLine + &quot;Cabbage&quot; + vbNewLine + &quot;Potato&quot;]" Title="Select Vegetable Names">
         <ui:InputDialog.Result>
-          <OutArgument x:TypeArguments="x:String">[Fruit_name]</OutArgument>
+          <OutArgument x:TypeArguments="x:String">[VegName]</OutArgument>
         </ui:InputDialog.Result>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-            <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:InputDialog>
       <FlowStep.Next>
-        <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Flow switch for diplay message&#xA;" DisplayName="Fruit Switch" Expression="[Fruit_name]" sap:VirtualizedContainerService.HintSize="70,86.66666666666667" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_2">
+        <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Flow switch for display message" DisplayName="Vegetable Switch" Expression="[VegName]" sap:VirtualizedContainerService.HintSize="95.33333333333333,86.66666666666667" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_3">
           <FlowSwitch.Default>
             <FlowStep x:Name="__ReferenceID1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <av:Point x:Key="ShapeLocation">390,183</av:Point>
+                  <av:Point x:Key="ShapeLocation">500,263</av:Point>
                   <av:Size x:Key="ShapeSize">200,54</av:Size>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Default Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;You have not select any narme&quot;]">
+              <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Default Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;You have not selected  any vegetable name&quot;]">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -126,24 +126,24 @@
           </FlowSwitch.Default>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">255,216.66666666666669</av:Point>
-              <av:Size x:Key="ShapeSize">70,86.66666666666667</av:Size>
-              <av:PointCollection x:Key="Default">325,260 355,260 355,210 390,210</av:PointCollection>
-              <av:PointCollection x:Key="KiwiConnector">307.5,303.33333333333337 307.5,400 390,400</av:PointCollection>
-              <av:PointCollection x:Key="MangoConnector">325,281.6666666666667 355,281.6666666666667 355,350 390,350</av:PointCollection>
-              <av:PointCollection x:Key="OrangeConnector">290,303.33333333333337 290,333.33333333333337 180,333.33333333333337 180,500.6 210,500.6</av:PointCollection>
-              <av:PointCollection x:Key="AppleConnector">272.5,303.33333333333337 272.5,333.33333333333337 180,333.33333333333337 180,560.6 210,560.6</av:PointCollection>
+              <av:Point x:Key="ShapeLocation">345,236.66666666666669</av:Point>
+              <av:Size x:Key="ShapeSize">95.33333333333333,86.66666666666667</av:Size>
+              <av:PointCollection x:Key="Default">416.5,236.66666666666669 416.5,206.66666666666669 600,206.66666666666669 600,263</av:PointCollection>
+              <av:PointCollection x:Key="CauliflowerConnector">345,280 150,280 150,373</av:PointCollection>
+              <av:PointCollection x:Key="CapsicumConnector">392.6666666666667,323.33333333333337 392.6666666666667,353.33333333333337 340,353.33333333333337 340,443</av:PointCollection>
+              <av:PointCollection x:Key="CabbageConnector">368,323.33333333333337 368,353.33333333333337 20,353.33333333333337 20,473.3333333333333 100,473.3333333333333 100,503.3333333333333</av:PointCollection>
+              <av:PointCollection x:Key="PotatoConnector">440.3333333333333,280 470.3333333333333,280 470.3333333333333,473 550,473 550,503</av:PointCollection>
               <x:Boolean x:Key="IsAnnotationDocked">False</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <FlowStep x:Key="Mango" x:Name="__ReferenceID2">
+          <FlowStep x:Key="Cauliflower" x:Name="__ReferenceID3">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">390,323</av:Point>
+                <av:Point x:Key="ShapeLocation">50,373</av:Point>
                 <av:Size x:Key="ShapeSize">200,54</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Mango Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;You Have selected Mango&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Cauliflower Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;You have selected Cauliflower&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -151,14 +151,14 @@
               </sap:WorkflowViewStateService.ViewState>
             </ui:MessageBox>
           </FlowStep>
-          <FlowStep x:Key="Kiwi" x:Name="__ReferenceID3">
+          <FlowStep x:Key="Cabbage" x:Name="__ReferenceID4">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">390,373</av:Point>
+                <av:Point x:Key="ShapeLocation">0,503.3333333333333</av:Point>
                 <av:Size x:Key="ShapeSize">200,54</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Kiwi Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;You Have selected Kiwi&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Cabbage Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;You have selected Cabbage&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -166,29 +166,47 @@
               </sap:WorkflowViewStateService.ViewState>
             </ui:MessageBox>
           </FlowStep>
-          <FlowStep x:Key="Apple" x:Name="__ReferenceID5">
+          <FlowStep x:Key="Capsicum" x:Name="__ReferenceID2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">210,533.6</av:Point>
+                <av:Point x:Key="ShapeLocation">240,443</av:Point>
                 <av:Size x:Key="ShapeSize">200,54</av:Size>
+                <av:PointCollection x:Key="ConnectorLocation">340,497 340,523.3333333333334 350,523.3333333333334</av:PointCollection>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Apple Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_6" Text="[&quot;You have selected Apple&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Capsicum Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;You have selected Capsicum&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </ui:MessageBox>
+            <FlowStep.Next>
+              <FlowStep x:Name="__ReferenceID6">
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <av:Point x:Key="ShapeLocation">250,523.3333333333334</av:Point>
+                    <av:Size x:Key="ShapeSize">200,54</av:Size>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
+                <ui:LogMessage DisplayName="Display success Message" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;User selected option displayed successfully&quot;]">
+                  <sap:WorkflowViewStateService.ViewState>
+                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    </scg:Dictionary>
+                  </sap:WorkflowViewStateService.ViewState>
+                </ui:LogMessage>
+              </FlowStep>
+            </FlowStep.Next>
           </FlowStep>
-          <FlowStep x:Key="Orange" x:Name="__ReferenceID4">
+          <FlowStep x:Key="Potato" x:Name="__ReferenceID5">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">210,473.6</av:Point>
+                <av:Point x:Key="ShapeLocation">450,503</av:Point>
                 <av:Size x:Key="ShapeSize">200,54</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Orange Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_5" Text="[&quot;You Have selected Orange&quot;]">
+            <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Potato Message Box" sap:VirtualizedContainerService.HintSize="200,54" sap2010:WorkflowViewState.IdRef="MessageBox_5" Text="[&quot;You have selected Potato&quot;]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -205,5 +223,6 @@
     <x:Reference>__ReferenceID3</x:Reference>
     <x:Reference>__ReferenceID4</x:Reference>
     <x:Reference>__ReferenceID5</x:Reference>
+    <x:Reference>__ReferenceID6</x:Reference>
   </Flowchart>
 </Activity>
