--- a/SourceCode/2023/Nov2023/Mrinali/Task16/Main.xaml
+++ b/SourceCode/2023/Nov2023/Mrinali/Task16/Main.xaml
@@ -86,7 +86,7 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Build the datatable and write in the Excel" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="450,790.6666666666666" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Build the datatable and write in the Excel" DisplayName="Build Datatable" sap:VirtualizedContainerService.HintSize="450,790.6666666666666" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="Result" />
       <Variable x:TypeArguments="sd:DataTable" Name="dt_StudentDetails" />
