--- a/SourceCode/2023/Nov2023/Mrinali/Task26/Main.xaml
+++ b/SourceCode/2023/Nov2023/Mrinali/Task26/Main.xaml
@@ -85,7 +85,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <StateMachine InitialState="{x:Reference __ReferenceID2}" sap2010:Annotation.AnnotationText="Guess the Random Number (State Machine)" DisplayName="Guess the Random Number(State Machine)" sap:VirtualizedContainerService.HintSize="634,668" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+    <StateMachine InitialState="{x:Reference __ReferenceID2}" sap2010:Annotation.AnnotationText="Guess the Random Number (StateMachine)" DisplayName="Guess the RandomNumber(State Machine)" sap:VirtualizedContainerService.HintSize="634,668" sap2010:WorkflowViewState.IdRef="StateMachine_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -96,7 +96,7 @@
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <State x:Name="__ReferenceID2" DisplayName="Generate Random Number" sap:VirtualizedContainerService.HintSize="134,62.666666666666664" sap2010:WorkflowViewState.IdRef="State_1">
+      <State x:Name="__ReferenceID2" DisplayName="Generate Random Number" sap:VirtualizedContainerService.HintSize="480.66666666666674,480.66666666666674" sap2010:WorkflowViewState.IdRef="State_1">
         <State.Entry>
           <Assign DisplayName="Generate Random Number and Assign to variable" sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_1">
             <Assign.To>
