--- a/SourceCode/2023/Nov2023/Britto/Task28/Main.xaml
+++ b/SourceCode/2023/Nov2023/Britto/Task28/Main.xaml
@@ -144,6 +144,6 @@
     <upap:ExtractPDFPageRange DisplayName="Extract PDF Page Range" FileName="SamplePdf1_12mb_6pages (1).pdf" sap:VirtualizedContainerService.HintSize="548.6666666666666,139.33333333333334" sap2010:WorkflowViewState.IdRef="ExtractPDFPageRange_1" OutputFileName="Output\ExtractedRangePdf.pdf" Range="2-4" />
     <upap:GetPDFPageCount DisplayName="Get PDF Page Count" FileName="SamplePdf1_12mb_6pages (1).pdf" sap:VirtualizedContainerService.HintSize="548.6666666666666,84" sap2010:WorkflowViewState.IdRef="GetPDFPageCount_1" PageCount="[pageCnt]" />
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="548.6666666666666,144.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[pageCnt]" />
-    <upap:JoinPDF DisplayName="Join PDF Files" FileList="[{&quot;Get_Started_With_Smallpdf (1)&quot;,&quot;SamplePdf1_12mb_6pages (1)&quot;}]" sap:VirtualizedContainerService.HintSize="548.6666666666666,84" sap2010:WorkflowViewState.IdRef="JoinPDF_1" OutputFileName="Output\MergedPdf.pdf" />
+    <upap:JoinPDF DisplayName="Join PDF Files" FileList="[{&quot;Get_Started_With_Smallpdf (1).pdf&quot;,&quot;SamplePdf1_12mb_6pages (1)pdf&quot;}]" sap:VirtualizedContainerService.HintSize="548.6666666666666,84" sap2010:WorkflowViewState.IdRef="JoinPDF_1" OutputFileName="Output\MergedPdf.pdf" />
   </Sequence>
 </Activity>
